web_app/css/main.css
html, body {
  margin: 0;
  font-family: Verdana, Geneva, sans-serif;
  padding: 0;
}

[v-cloak] {
  display: none
}

.list {
  display: block;
}

.mark {
  background: #fff;
  padding: 10px 30px;
}

/* --------- HEADER -------- */

h1, header a, header a:visited {
  text-decoration: none;
  color: rgb(240, 240, 240);
}

header {
  background: #6d93ac;
  /* background: #517690; */
  padding: 30px;
}

header a {
  width: 276px;
  display: block;
  transform: translateX(-50%);
  left: 50%;
  position: relative;
}

Header .logo {
  display: block;
  position: absolute;
  left: -15px;
}

h1 {
  font-size: 1.6em;
}

/* ---------- MAIN ----------- */

body {
  background: #3e3e3e;
  /* background: #8db2cc; */
}

#data-wrapper {
  box-sizing: border-box;
  background: #f0f0f0;
  border-radius: 2px;
  width: 100%;
  max-width: 960px;
  margin: auto;
  padding: 60px;
  color:rgb(49, 49, 49);
}

#data-wrapper h2, #data-wrapper h3, #data-wrapper form, a {
  text-align: center;
}

#data-wrapper h2 {
  margin-top: 0;
}

#data-wrapper input, #data-wrapper button {
  font-size: 1.3em;
  padding: 2px 3px;
  margin: 5px;
}

#data-wrapper input {
  min-width: 280px;
}

form {
  position: relative;
}

#loading-icon {
  position: absolute;
  top: 8px;
}

ul {
  list-style: none;
  display: flex;
  max-width: 100%;
  position: relative;
  flex-wrap: wrap;
}

ul li {
  padding-right: 9px;
  line-height: 1.5em;
}

.good-match {
  font-weight: bold;
}

.bad-match {
  opacity: .66;
}

/* --------- FOOTER --------- */

footer .logo {
  max-width: 32px;
  max-height: 32px;
  display: inline-block;
  position: relative;
  top: 8px;
  margin-right: 16px;
}

footer h4 {
  display: inline-block;
}

footer, footer ul {
  text-align: center;
}

footer ul {
  display: block;
  margin: 0;
  padding: 0;
  max-width: 600px;
  width: 100%;
  transform: translateX(-50%);
  position: relative;
  left: 50%;
}

footer ul li {
  margin: 0 20px;
}

footer, footer a {
  color: #fff;
}

footer a {
  text-decoration: underline;
}

footer a:hover {
  color: #6d93ac;
  text-decoration: none;
}

